--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <title>OverEngineeredCalorieTracker</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div id="stem"></div>
+    </div>
   </body>
 </html>
